--- a/media.css
+++ b/media.css
@@ -15,7 +15,7 @@
     left: 0;
     padding: 20px;
     height: 100%;
-    width: 30%;
+    width: 40%;
     animation: slide 2s linear;
   }
 
@@ -27,18 +27,40 @@
   .navbar-container .menu-items.active li {
     margin-top: 10px;
   }
-}
-.showcase-container .min-title{
-  font-size: 4rem;
-  color: var(--primary);
-}
-
-/* category */
-.food-container {
+  .showcase-container .min-title{
+    font-size: 4rem;
+    color: var(--primary);
+  }
+.food-container{
   flex-direction: column;
-  gap: ;
+  flex-wrap: wrap;
+  gap: 10px;
+}  
+.food-menu-item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.testimonials-container{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+ 
+}
+.contact-container{
+  display: flex;
+flex-wrap: wrap;
 }
 
+.form-container{
+width: 100%;
+}
+
+
+}
+/* animation */
 @keyframes slide {
   0% {
     transform: translateX(-100%);
